# loan-calculator-trial

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  Caddyfile  Caddyfile.edge  Caddyfile.edge.template.caddyfile  Caddyfile.main  Dockerfile.cloudrun  Dockerfile.lint  Makefile  PROFESSIONAL_FEATURES.md  README.md  RELEASE_PROCESS.md  check-env.sh  deploy-blue-green.sh  deploy.sh  docker-compose.local.yml  docker-compose.yml  live.caddy  pyproject.toml  requirements-dev.txt  sprints.json
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  app.py  requirements.txt
docs/: PRD.md  SERVER_SETUP.md  migration-google-cloud-run.md  sprint-seo-chat.json  sprint-seo-chat.md  test-plan.md
docs/next/: AFFILIATE_INTEGRATIONS.md  ANALYTICS_METRICS.md  API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  PRD.md  ROADMAP.md  SCHEMA.sql  SECURITY_PRIVACY.md
docs/product-plans/: README.md  next-api-spec.md  next-release-process.md  next-roadmap.md  next-test-plan.md  prd-compliance.md  v2-architecture.md  v2-prd.md
docs/sprints/: 1-seo-chat.md  sprint-1.json  sprint-2.json
docs/v2-plan-consolidated/: PRD.md
scripts/: build-dev.sh  build-release.sh  check-env.sh  ensure_external_volumes.sh  health-check.sh  release_tag.sh  rollback_to.sh  validate_all.sh  validate_caddy_prod.sh  validate_local.sh  validate_prod.sh
sprints/: 2-prd-compliance.md  sprint-1.json
tests/: conftest.py  test_caddy.py  test_integration.py  test_leads.py  test_quote.py  test_smoke.py  test_static.py  test_track.py
web/: Dockerfile
(+5 files in other folders)
