[project]
name = "loan-calculator-internal"
version = "0.0.0"
description = "Internal tooling for the vehicle loan calculator"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^/\.git/
  | ^/web/dist/
)
'''

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["web/dist"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E203",  # whitespace before ':' (compat with Black)
  "E501",  # line length handled by Black
]
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[tool.mdformat]
wrap = 88
extensions = ["gfm"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]